Fix overflow

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -45,6 +45,7 @@ html {
 
     font-size: 62.5%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
